logs/Slang/generated/hdlconv/hdlconvertor_p506.sv.log
name: hdlconvertor_p506
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p506.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p506.sv:1:1: error: language feature not yet supported
class XYPair;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p506.sv:5:1: error: language feature not yet supported
class MyXYPair extends XYPair;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
